--- a/TestInnocv/Presentation/Base.lproj/Main.storyboard
+++ b/TestInnocv/Presentation/Base.lproj/Main.storyboard
@@ -8,28 +8,49 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--User List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestInnocv" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UserListViewController" id="BYZ-38-t0r" customClass="UserListViewController" customModule="TestInnocv" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yf6-Lk-Nke">
-                                <rect key="frame" x="186" y="437.5" width="42" height="21"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fPm-QA-YvM">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5S4-Ax-GLJ">
+                                <rect key="frame" x="16" y="438" width="382" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="bAN-LR-mwD">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="yf6-Lk-Nke" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YgM-xm-ffh"/>
-                            <constraint firstItem="yf6-Lk-Nke" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="shA-U0-vMB"/>
+                            <constraint firstItem="bAN-LR-mwD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BYF-RK-BR0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fPm-QA-YvM" secondAttribute="trailing" id="EQe-gP-Bsz"/>
+                            <constraint firstItem="5S4-Ax-GLJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="ODr-wX-QrL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5S4-Ax-GLJ" secondAttribute="trailing" constant="16" id="Qn3-Fn-zzJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5S4-Ax-GLJ" secondAttribute="bottom" constant="16" id="WLl-Na-Gwo"/>
+                            <constraint firstItem="5S4-Ax-GLJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fk7-yw-sOg"/>
+                            <constraint firstItem="5S4-Ax-GLJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qAi-T8-gV0"/>
+                            <constraint firstItem="bAN-LR-mwD" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="qTo-oT-LGX"/>
+                            <constraint firstItem="fPm-QA-YvM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rPL-u8-Msp"/>
+                            <constraint firstAttribute="bottom" secondItem="fPm-QA-YvM" secondAttribute="bottom" id="upK-bZ-qvt"/>
+                            <constraint firstItem="fPm-QA-YvM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="x2P-yb-Dts"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="bAN-LR-mwD" id="jCi-9t-1t1"/>
+                        <outlet property="emptyLabel" destination="5S4-Ax-GLJ" id="72L-c9-u2B"/>
+                        <outlet property="tableView" destination="fPm-QA-YvM" id="dLv-Ar-uy8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
