Implemented update user.

--- a/TestInnocv/Presentation/Base.lproj/Main.storyboard
+++ b/TestInnocv/Presentation/Base.lproj/Main.storyboard
@@ -64,11 +64,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="yc9-sL-ceV">
+                                <rect key="frame" x="197" y="438" width="20" height="20"/>
+                            </activityIndicatorView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kQ0-c1-awM">
                                 <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YOd-oo-N0Q">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="270"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="246"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFN-CO-nRc">
                                                 <rect key="frame" x="16" y="16" width="382" height="21"/>
@@ -93,7 +96,7 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mp5-Gw-nL1">
-                                                <rect key="frame" x="16" y="214" width="382" height="40"/>
+                                                <rect key="frame" x="16" y="190" width="382" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="JgR-fY-i47"/>
                                                 </constraints>
@@ -107,7 +110,7 @@
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="mp5-Gw-nL1" secondAttribute="bottom" constant="16" id="6vm-Te-eyw"/>
                                             <constraint firstItem="a3a-o3-oSA" firstAttribute="trailing" secondItem="1zN-2J-TVp" secondAttribute="trailing" id="854-aT-zU9"/>
-                                            <constraint firstItem="mp5-Gw-nL1" firstAttribute="top" secondItem="a3a-o3-oSA" secondAttribute="bottom" constant="48" id="8Ul-Ir-1e7"/>
+                                            <constraint firstItem="mp5-Gw-nL1" firstAttribute="top" secondItem="a3a-o3-oSA" secondAttribute="bottom" constant="24" id="8Ul-Ir-1e7"/>
                                             <constraint firstItem="iFN-CO-nRc" firstAttribute="top" secondItem="YOd-oo-N0Q" secondAttribute="top" constant="16" id="9fW-lT-29O"/>
                                             <constraint firstItem="1zN-2J-TVp" firstAttribute="trailing" secondItem="TMp-SE-iQh" secondAttribute="trailing" id="ClE-9p-5pv"/>
                                             <constraint firstItem="1zN-2J-TVp" firstAttribute="top" secondItem="TMp-SE-iQh" secondAttribute="bottom" constant="24" id="DWd-Ge-IZg"/>
@@ -136,13 +139,16 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="kQ0-c1-awM" firstAttribute="trailing" secondItem="4fw-JS-8IN" secondAttribute="trailing" id="1qr-fw-xJ9"/>
+                            <constraint firstItem="yc9-sL-ceV" firstAttribute="centerX" secondItem="UkU-i4-bSY" secondAttribute="centerX" id="BGd-QY-eaW"/>
                             <constraint firstAttribute="bottom" secondItem="kQ0-c1-awM" secondAttribute="bottom" id="Sbe-fb-M4H"/>
+                            <constraint firstItem="yc9-sL-ceV" firstAttribute="centerY" secondItem="UkU-i4-bSY" secondAttribute="centerY" id="WH2-d2-fCD"/>
                             <constraint firstItem="kQ0-c1-awM" firstAttribute="top" secondItem="4fw-JS-8IN" secondAttribute="top" id="i0n-iU-gJv"/>
                             <constraint firstItem="kQ0-c1-awM" firstAttribute="leading" secondItem="4fw-JS-8IN" secondAttribute="leading" id="oqo-fh-k9G"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4fw-JS-8IN"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="yc9-sL-ceV" id="61Q-CS-G2V"/>
                         <outlet property="dateLabel" destination="1zN-2J-TVp" id="ffq-AQ-zGT"/>
                         <outlet property="dateTextField" destination="a3a-o3-oSA" id="VNF-Zg-ZQt"/>
                         <outlet property="nameLabel" destination="iFN-CO-nRc" id="e4L-sy-Jwt"/>
